# docs/swagger.json
@@ -321,9 +321,163 @@
                     }
                 }
             }
+        },
+        "/api/v1/resep": {
+            "post": {
+                "description": "Create a new data resep.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "resep"
+                ],
+                "summary": "Create resep",
+                "parameters": [
+                    {
+                        "description": "Create resep",
+                        "name": "resep",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Resep"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/resep/delete/{id}": {
+            "delete": {
+                "description": "Return data boolean.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "resep"
+                ],
+                "summary": "Delete resep by id.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "delete resep by id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/resep/{id}": {
+            "get": {
+                "description": "Return data resep where similar with id.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "resep"
+                ],
+                "summary": "Get Single resep by id.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "get resep by id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update data master resep.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "resep"
+                ],
+                "summary": "Update resep",
+                "parameters": [
+                    {
+                        "description": "Update resep",
+                        "name": "bahan",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Resep"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "find resep by id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "models.Bahan": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_deleted": {
+                    "type": "boolean"
+                },
+                "komposisi": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Komposisi"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "models.BahanInput": {
             "type": "object",
             "required": [
@@ -335,6 +489,29 @@
                 }
             }
         },
+        "models.Kategori": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_deleted": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
         "models.KategoriInput": {
             "type": "object",
             "required": [
@@ -342,6 +519,73 @@
             ],
             "properties": {
                 "nama": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Komposisi": {
+            "type": "object",
+            "required": [
+                "bahan_id",
+                "resep_id",
+                "takaran"
+            ],
+            "properties": {
+                "bahan": {
+                    "$ref": "#/definitions/models.Bahan"
+                },
+                "bahan_id": {
+                    "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "resep": {
+                    "$ref": "#/definitions/models.Resep"
+                },
+                "resep_id": {
+                    "type": "integer"
+                },
+                "takaran": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Resep": {
+            "type": "object",
+            "required": [
+                "kategori_id",
+                "name"
+            ],
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "kategori": {
+                    "$ref": "#/definitions/models.Kategori"
+                },
+                "kategori_id": {
+                    "type": "integer"
+                },
+                "komposisi": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Komposisi"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
